stack avatars component, fixing color contrast on dark mode

--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -190,3 +190,22 @@ button {
 	color: black;
 	background-color: #f6f6f6;
 }
+
+.external-conference-perfermance-card-content {
+	background-color: #cfcfcf;
+
+	p {
+		color: #575757;
+	}
+
+	.title {
+		color: black;
+	}
+}
+
+.avatar-container {
+	p {
+		color: #575757;
+		margin: 0;
+	}
+}
