--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -160,6 +160,21 @@ button {
 }
 
 .light-gray-bg-color {
-	color: white;
+	color: #fff;
 	background-color: #636363;
+}
+
+.external-conference-perfermance-card-content {
+	background-color: #212125;
+
+	p,
+	.title {
+		color: #d9d9d9;
+	}
+}
+
+.avatar-container {
+	p {
+		color: #d9d9d9;
+	}
 }
